--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,12 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Logs
+*.log
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
 go.work
+/server/logs/all.log
